fix(linux): NVIDIA EGL Device Platform fallback + JAWT X11 window resolution
Problem 1 - NVIDIA Wayland EGL:
- Add EGL_PLATFORM_DEVICE_EXT fallback when GBM surfaceless fails
- initEGL now does eglMakeCurrent pre-check on same thread
- If GBM path fails (NVIDIA EGL_NOT_INITIALIZED), falls back to
  Device Platform with pbuffer surface
- Render thread uses task->eglSurface (pbuffer or surfaceless)
- mpv render context: try with DRM params, then without, then SW
- GLES3 fallback if GL config unavailable on GBM

Problem 2 - X11 AWT peer resolution:
- Add JAWT-based getX11WindowId() native function (stable API)
- JAWT loaded dynamically via dlsym (no link-time dependency)
- Fallback chain: JAWT -> XBaseWindow.window field -> methods
- Diagnostic logs for each resolution step

Build:
- Add -ldl for dlsym/dlopen (JAWT dynamic loading)
- Remove -ljawt link dependency (caused .so load failure)